# home-assistant-aoai-conversation

./: .env.example  .gitignore  AGENTS.md  README.md  hacs.json  mise.toml  pyproject.toml
.github/workflows/: lint.yaml  validate.yaml
custom_components/aoai_conversation/: __init__.py  ai_task.py  client.py  config_flow.py  const.py  entity.py  manifest.json  services.yaml  speech.py  strings.json  stt.py  tts.py
custom_components/aoai_conversation/translations/: en.json
scripts/: smoketest.py
tests/: conftest.py  test_agent.py  test_client.py  test_config_flow.py  test_init.py  test_services.py  test_speech.py  test_speech_entities.py
